--- a/Thor_Patcher[2.6.4.13b]/Additional Skins/v1/config.ini
+++ b/Thor_Patcher[2.6.4.13b]/Additional Skins/v1/config.ini
@@ -1,16 +1,17 @@
+
 [Config:Main]
 
-RootURL='http://127.0.0.1/web/'
+RootURL='http://127.0.0.1/patch/'
 
 RemoteConfigFile='main.ini'
 
 TimeOut=0
 
-StatusFile='server.dll'
+StatusFile='server.dat'
 
-DefaultGRF='unity.dll'
+DefaultGRF='server.grf'
 
-ClientEXE='Guardião.exe'
+ClientEXE='game.exe'
 ClientParameter='-1sak1'
 
 //When patcher unable to connect webserver,
@@ -18,24 +19,27 @@ ClientParameter='-1sak1'
 FinishOnConnectionFailure=false
 
 [Config:Window]
-
+AutoResize=true
 Style='none'
+
+Width=
+Height=
 
 //This allows the player drag the window by background
 DragHandling=true
 
 //Background can be either jpg or bmp, in later case
 //the top-left pixel is chosen as transparent color.
-Background='images/bg.bmp'
+Background='images/bg.jpg'
 
-FadeOnDrag=true
+FadeOnDrag=false
 
 [Config:BGM]
-File=''
+File=
 
 Loop=true
 
-Volume=5
+Volume=20
 
 Directory=
 
@@ -46,11 +50,17 @@ HideProgressBarWhenFinish=true
 
 
 [ProgressBar:bar1]
-Width=310
+Width=342
 Height=10
 
-Left=97
-Top=368
+Left=23
+Top=486
+
+BackColorStart=$009DEEEF
+BackColorEnd=$00C2F1F1
+
+FrontColorStart=$006ED5B0
+FrontColorEnd=$0080DDCA
 
 FrontImage=
 BackImage=
@@ -62,11 +72,11 @@ Hook='ProgressChange'
 [Label:Status]
 AutoResize = false
 
-Width=318
+Width=369
 Height=
 
-Left=97
-Top=345
+Left=40
+Top=509
 Alignment='center'
 
 FontColor=$000000
@@ -78,11 +88,11 @@ Text=''
 Hook='StatusChange'
 
 [NoticeBox:Box0]
-Width=300
-Height=200
-Left=102
-Top=100
-URL='http://127.0.0.1/web/notice.html'
+Width=389
+Height=258
+Left=29
+Top=208
+URL='http://127.0.0.1/opatch/Notice.html'
 
 
 
@@ -91,8 +101,8 @@ Default='images/start1.png'
 OnHover='images/start2.png'
 OnDown='images/start3.png'
 
-Left=573
-Top=184
+Left=112
+Top=475
 
 //Hook is used for default buttons,
 //do not use this on custom buttons!
@@ -103,8 +113,8 @@ Default='images/Exit1.png'
 OnHover='images/Exit2.png'
 OnDown='images/Exit3.png'
 
-Left=573
-Top=222
+Left=248
+Top=475
 
 Hook='Exit'
 
@@ -113,8 +123,8 @@ Default='images/Exit1.png'
 OnHover='images/Exit2.png'
 OnDown='images/Exit3.png'
 
-Left=573
-Top=222
+Left=329
+Top=480
 Hook='Cancel'
 
 //[Button:Extra]
