--- a/Thor_Patcher[2.6.4.13b]/Configuration/config.ini
+++ b/Thor_Patcher[2.6.4.13b]/Configuration/config.ini
@@ -1,16 +1,16 @@
 [Config:Main]
 
-RootURL='http://127.0.0.1/web/'
+RootURL='http://unityro.ddns.net/web/'
 
 RemoteConfigFile='main.ini'
 
 TimeOut=0
 
-StatusFile='server.dll'
+StatusFile='Unitysave.dll'
 
 DefaultGRF='unity.dll'
 
-ClientEXE='Guardião.exe'
+ClientEXE='Unity.exe'
 ClientParameter='-1sak1'
 
 //When patcher unable to connect webserver,
@@ -82,7 +82,7 @@ Width=300
 Height=200
 Left=102
 Top=100
-URL='http://127.0.0.1/web/notice.html'
+URL='http://unityro.ddns.net/web/notice.html'
 
 
 
