--- a/odbg200/ollydbg.ini
+++ b/odbg200/ollydbg.ini
@@ -177,7 +177,7 @@ Accept non-standard command forms=1
 Accept access to nonexisting memory=0
 Accept interrupt commands=0
 [OllyDbg]
-Placement=363,32,640,480,1
+Placement=292,90,640,480,1
 [History]
 Log file=log.txt
 Trace save file=trace.txt
@@ -185,11 +185,11 @@ Data directory=.
 API help file=
 Last viewed file=
 Previous JIT=
-Executable[0]=C:\Users\Sabino\Desktop\Emulador\Cliente-RO\trunk\Unity.exe
+Executable[0]=C:\Users\Sabino\Desktop\Emulador\utilitarios\trunk\odbg200\InternalGuard.exe
 Arguments[0]=
-Executable[1]=C:\Users\Sabino\Desktop\Emulador\Cliente-RO\trunk\Guardião.exe
+Executable[1]=C:\Users\Sabino\Desktop\Emulador\Cliente-RO\trunk\Unity.exe
 Arguments[1]=
-Executable[2]=
+Executable[2]=C:\Users\Sabino\Desktop\Emulador\Cliente-RO\trunk\Guardião.exe
 Arguments[2]=
 Executable[3]=
 Arguments[3]=
@@ -210,7 +210,7 @@ Columns=54,102,240,1536
 Appearance=1,0,0,0,0
 [CPU registers]
 Appearance=1,0,1,0,0
-Local=0,0
+Local=0,69376
 [CPU Dump]
 Appearance=1,0,1,0,0
 Columns=54,288,102
