--- a/data.ini
+++ b/data.ini
@@ -1,5 +1,5 @@
-0=data.grf
-1=mfc98.dll
-2=unity.grf
-3=C:\Gravity\Ragnarok Online\cdata.dll
-4=C:\Gravity\Ragnarok Online\data.dll
+0=mfc98.dll
+1=unity.dll
+2=C:\Gravity\Ragnarok Online\cdata.dll
+3=C:\Gravity\Ragnarok Online\data.dll
+4=data.grf
