--- a/data.ini
+++ b/data.ini
@@ -1,5 +1,6 @@
+[data]
 0=mfc98.dll
 1=unity.dll
-2=C:\Gravity\Ragnarok Online\cdata.dll
-3=C:\Gravity\Ragnarok Online\data.dll
-4=data.grf
+2=data.grf
+3=C:\Gravity\Ragnarok Online\cdata.dll
+4=C:\Gravity\Ragnarok Online\data.dll
