--- a/resource_hacker/ResourceHacker.ini
+++ b/resource_hacker/ResourceHacker.ini
@@ -6,8 +6,8 @@ BkColor=16185078
 DefaultLang=0
 ToolbarSize=1
 
-left=518
-top=19
+left=335
+top=336
 width=697
 height=745
 
@@ -25,12 +25,12 @@ CharSet=1
 Style=0
 
 [MRU List]
-1=C:\Users\Sabino\Desktop\UnityRO.exe
-2=C:\Users\Sabino\Desktop\resource_hacker\UnityRO1.exe
-3=C:\Users\Sabino\Desktop\UnityRO1.exe
-4=C:\Users\Sabino\Desktop\Thor.exe
-5=
-6=
-7=
-8=
+1=C:\Users\Sabino\Desktop\Unity-RO - Copia.msi
+2=C:\Users\Sabino\Documents\Visual Studio 2015\Projects\Setup1\Setup1\Setup1\Express\CD_ROM\DiskImages\DISK1\Unity Install\Setup1.msi
+3=C:\Users\Sabino\Documents\Visual Studio 2015\Projects\Setup1\Setup1\Setup1\Express\CD_ROM\DiskImages\DISK1\Unity Install\UnityR.exe
+4=C:\Users\Sabino\Desktop\Emulador\utilitarios\trunk\resource_hacker\UnityRO.exe
+5=C:\Users\Sabino\Documents\Visual Studio 2015\Projects\Setup1\Setup1\Setup1\Express\CD_ROM\DiskImages\DISK1\Unity Install\UnityRO.exe
+6=C:\Users\Sabino\Desktop\UnityRO.exe
+7=C:\Users\Sabino\Desktop\UnityRO_original.exe
+8=C:\Users\Sabino\Desktop\UnityRO_original1.exe
 
